--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8222,7 +8222,8 @@ table.dataTable thead .sorting_desc_disabled:after {
 @media (min-width: 768px) {
   .listingImage li {
     /*width: 25%;*/
-    height: 247px;
+    height: 350px;
+    overflow: hidden;
   }
 }
 
