Updated dropdown timepicker styles.

--- a/public/css/jquery.timepicker.css
+++ b/public/css/jquery.timepicker.css
@@ -1,7 +1,7 @@
 .ui-timepicker-wrapper {
 	overflow-y: auto;
 	max-height: 150px;
-	width: 6.5em;
+	width: 23.5em;
 	background: #fff;
 	border: 1px solid #ddd;
 	-webkit-box-shadow:0 5px 10px rgba(0,0,0,0.2);
@@ -10,6 +10,7 @@
 	outline: none;
 	z-index: 10052;
 	margin: 0;
+	padding-left: 10px;
 }
 
 .ui-timepicker-wrapper.ui-timepicker-with-duration {
