review star rating completed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5455,7 +5455,8 @@ figure:hover .overlay {
   margin-left: -1px;
 }
 
-.categoryDetails .rating li i.fa {
+.categoryDetails .
+li i.fa {
   font-size: 10px;
 }
 
@@ -5885,7 +5886,7 @@ figure:hover .overlay {
   background-color: #00cc67;
   float: left;
   -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
-          animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
+          animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
 }
 .sk-cube-grid .sk-cube1 {
   -webkit-animation-delay: 0.2s;
@@ -5921,7 +5922,7 @@ figure:hover .overlay {
             transform: scale3D(1, 1, 1);
   } 35% {
     -webkit-transform: scale3D(0, 0, 1);
-            transform: scale3D(0, 0, 1); 
+            transform: scale3D(0, 0, 1);
   }
 }
 
@@ -5932,7 +5933,7 @@ figure:hover .overlay {
   } 35% {
     -webkit-transform: scale3D(0, 0, 1);
             transform: scale3D(0, 0, 1);
-  } 
+  }
 }
 
 .listy-logo-svg {
@@ -9982,7 +9983,7 @@ input[type=text], textarea {
   outline: none;
   border: 1px solid #DDDDDD;
 }
- 
+
 input[type=text]:focus, textarea:focus {
   box-shadow: 0 0 5px rgba(81, 203, 238, 1);
   border: 1px solid rgba(81, 203, 238, 1);
